fixed card visibility in screennn

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,6 +137,9 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
+.video::-webkit-media-controls {
+  display: none !important;
+}
 
 @layer base {
   * {
